# occiwrapper

./: AUTHORS  AbstractBinder.cpp  AbstractBinder.h  AbstractBinding.cpp  AbstractBinding.h  AbstractExtraction.cpp  AbstractExtractor.h  BinaryReader.cpp  BinaryWriter.cpp  Binder.cpp  Binder.h  Binding.h  BlobStream.cpp  ByteOrder.cpp  COPYING  ChangeLog  Common.cpp  Common.h  Connection.cpp  Connection.h  ConnectionInfo.cpp  ConnectionInfo.h  ConnectionPool.cpp  ConnectionPool.h  Environment.cpp  Environment.h  Exception.h  Extraction.h  Extractor.cpp  Extractor.h  Limit.cpp  Limit.h  Lob.cpp  LobBase.cpp  Makefile.am  README  README.md  Session.cpp  Session.h  SessionFactory.cpp  (+14 more)
bin_vs2008/: OcciWrapper.lib  OcciWrapperd.lib
bin_vs2010/: OcciWrapper.lib  OcciWrapperd.lib  readme.txt
db/: create_user.sql  occiwrapper.sql
include/OcciWrapper/: AbstractBinder.h  AbstractBinding.h  AbstractExtraction.h  AbstractExtractor.h  BinaryReader.h  BinaryWriter.h  Binder.h  Binding.h  BlobStream.h  ByteOrder.h  Common.h  Connection.h  ConnectionInfo.h  ConnectionPool.h  Environment.h  Exception.h  Extraction.h  Extractor.h  Limit.h  Lob.h  LobBase.h  OcciWrapper.h  Session.h  SessionFactory.h  Statement.h  StatementImpl.h  Type.h  TypeHandler.h  UnbufferedStreamBuf.h
include/occi_11g/occi/: nzerror.h  nzt.h  occiCommon.h  occiControl.h  occiData.h  oci.h  ociap.h  ocixml.h  ocixmldb.h  ocixstream.h  odci.h  oratypes.h
lib_vs2008/: oraocci11.lib  oraocci11d.lib
lib_vs2010/: oraocci11.lib  oraocci11d.lib
test/: Config.cpp  Config.h  DbConfig.cpp  DbConfig.h  InputTxt.txt  Makefile.am  OutputTxt.txt  Test.h  TestBlob.cpp  TestBlob.h  TestByteOrder.cpp  TestByteOrder.h  TestClob.cpp  TestClob.h  TestConnection.cpp  TestConnection.h  TestConnectionPool.cpp  TestConnectionPool.h  TestEnviroment.cpp  TestEnviroment.h  TestObj.cpp  TestObj.h  TestSessionFactory.cpp  TestSessionFactory.h  TestTuple.cpp  TestTuple.h  db_config.ini  main.cpp  test_vs2008.vcproj  test_vs2010.vcxproj  test_vs2010.vcxproj.filters
