#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
#AC_INIT(occiwrapper, 1.0.0, CUCmehp@foxmail.com)
AC_INIT(occiwrapper )
AM_INIT_AUTOMAKE(occiwrapper, 5.7, CUCmehp@foxmail.com)
AC_CONFIG_SRCDIR(include/OcciWrapper/OcciWrapper.h)

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_LIBTOOL

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS(limits.h stddef.h tr1/memory)

# Checks for typedefs, structures, and compiler characteristics.
#AC_CHECK_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_CHECK_FUNCS([floor localtime_r memmove])

AC_OUTPUT(Makefile
          test/Makefile
         )
